# openFST

./: .gitignore  CMakeLists.txt  README  cmake-variants.yaml  test_install.sh
cmake/: OpenFSTConfig.cmake.in  OpenFstConfig.cmake.in  README.md  openfst_config.h.in
src/extensions/ngram/: bitmap-index.cc  nthbit.cc
src/include/fst/: equal.h  float-weight.h  fst.h  heap.h  log.h  relabel.h  shortest-distance.h  symbol-table.h
src/include/fst/extensions/far/: extract.h
src/include/fst/extensions/linear/: linear-fst-data-builder.h  linear-fst-data.h  linear-fst.h
src/include/fst/extensions/ngram/: bitmap-index.h  ngram-fst.h  nthbit.h
src/include/fst/extensions/pdt/: paren.h
src/include/fst/test/: algo_test.h  fst_test.h  rand-fst.h  weight-tester.h
src/test/: weight_test.cc
